packages/@winglang/tree-sitter-wing/grammar.js
    source: ($) => repeat($._statement),
    block: ($) =>
      choice(braced(optional(repeat($._statement))), $.AUTOMATIC_BLOCK),
    _semicolon: ($) => choice(";", $.AUTOMATIC_SEMICOLON),
    reference: ($) =>
      choice(
        $.nested_identifier,
        $._reference_identifier,
        $.structured_access_expression
      ),

    identifier: ($) => /([A-Za-z_$][A-Za-z_$0-9]*|[A-Z][A-Z0-9_]*)/,
    _type_identifier: ($) => alias($.identifier, $.type_identifier),
    _reference_identifier: ($) => alias($.identifier, $.reference_identifier),

    custom_type: ($) =>
      prec.right(
        seq(
          field("object", $._type_identifier),
          // While the final "fields" identifier is optional in this grammar, upstream parsing will fail if it is not present
          repeat(seq(".", optional(field("fields", $._type_identifier))))
        )
      ),

    phase_specifier: ($) => choice("unphased", "inflight"),

    empty_statement: ($) => ";",

    _statement: ($) =>
      choice(
        $.empty_statement,
        $.test_statement,
        $.import_statement,
        $.expression_statement,
        $.variable_definition_statement,
        $.variable_assignment_statement,
        $.return_statement,
        $.class_definition,
        $.interface_definition,
        $.for_in_loop,
        $.while_statement,
        $.break_statement,
        $.continue_statement,
        $.if_statement,
        $.if_let_statement,
        $.struct_definition,
        $.enum_definition,
        $.try_catch_statement,
        $.super_constructor_statement,
        $.throw_statement,
        $.lift_statement
      ),

    struct_definition: ($) =>
      seq(
        optional(field("access_modifier", $.access_modifier)),
        "struct",
        field("name", $.identifier),
        optional(seq("extends", commaSep(field("extends", $.custom_type)))),
        braced(repeat(field("field", $.struct_field)))
      ),
    struct_field: ($) =>
      seq(field("name", $.identifier), $._type_annotation, $._semicolon),

    enum_definition: ($) =>
      seq(
        optional(field("access_modifier", $.access_modifier)),
        "enum",
        field("enum_name", $.identifier),
        braced(commaSep(alias($.identifier, $.enum_field)))
      ),

    return_statement: ($) =>
      seq("return", optional(field("expression", $.expression)), $._semicolon),

    assignment_operator: ($) => choice("=", "+=", "-="),

    variable_assignment_statement: ($) =>
      seq(
        field("name", alias($.reference, $.lvalue)),
        field("operator", $.assignment_operator),
        field("value", $.expression),
        $._semicolon
      ),

    expression_statement: ($) => seq($.expression, $._semicolon),

    reassignable: ($) => "var",

    variable_definition_statement: ($) =>
      seq(
        "let",
        optional(field("reassignable", $.reassignable)),
        field("name", $.identifier),
        optional($._type_annotation),
        "=",
        field("value", $.expression),
        $._semicolon
      ),

    _type_annotation: ($) => seq(":", field("type", $._type)),

    // Classes

    inclusive_range: ($) => "=",

    loop_range: ($) =>
      seq(
        field("start", $.expression),
        "..",
        optional(field("inclusive", $.inclusive_range)),
        field("end", $.expression)
      ),

    for_in_loop: ($) =>
      seq(
        "for",
        field("iterator", $.identifier),
        "in",
        field("iterable", choice($.expression, $.loop_range)),
        field("block", $.block)
      ),

    while_statement: ($) =>
      seq("while", field("condition", $.expression), field("block", $.block)),

    break_statement: ($) => seq("break", $._semicolon),
    _super: ($) => "super",
    super_constructor_statement: ($) =>
      seq($._super, field("args", $.argument_list), $._semicolon),

    continue_statement: ($) => seq("continue", $._semicolon),

    if_let_statement: ($) =>
      seq(
        "if",
        "let",
        optional(field("reassignable", $.reassignable)),
        field("name", $.identifier),
        "=",
        field("value", $.expression),
        field("block", $.block),
        repeat(
          choice(
            field("else_if_let_block", $.else_if_let_block),
            field("else_if_block", $.else_if_block)
          )
        ),
        optional(seq("else", field("else_block", $.block)))
      ),

    else_if_let_block: ($) =>
      seq(
        "else",
        "if",
        "let",
        optional(field("reassignable", $.reassignable)),
        field("name", $.identifier),
        "=",
        field("value", $.expression),
        field("block", $.block)
      ),

    if_statement: ($) =>
      seq(
        "if",
        field("condition", $.expression),
        field("block", $.block),
        repeat(field("else_if_block", $.else_if_block)),
        optional(seq("else", field("else_block", $.block)))
      ),

    else_if_block: ($) =>
      seq(
        "else",
        "if",
        field("condition", $.expression),
        field("block", $.block)
      ),

    number: ($) => choice($._integer, $._decimal),
    _integer: ($) => /\d[\d_]*/,
    _decimal: ($) => /\d[\d_]*\.\d[\d_]*/,

    bool: ($) => choice("true", "false"),

    string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $._string_fragment,
            $._escape_sequence,
            $.template_substitution
          )
        ),
        '"'
      ),
    _string_fragment: ($) => token.immediate(prec(1, /[^{"\\]+/)),
    _escape_sequence: ($) =>
      token.immediate(
        seq(
          "\\",
          choice(
            "{",
            /[^xu0-7]/,
            /[0-7]{1,3}/,
            /x[0-9a-fA-F]{2}/,
            /u[0-9a-fA-F]{4}/,
            /u\{[0-9a-fA-F]+\}/
          )
        )
      ),

    call: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("caller", choice($.expression, $.super_call)),
          field("args", $.argument_list)
        )
      ),

    argument_list: ($) =>
      seq(
        "(",
        commaSep(choice($.positional_argument, $.keyword_argument)),
        ")"
      ),

    positional_argument: ($) => $.expression,

    _type: ($) =>
      choice(
        $.custom_type,
        $.builtin_type,
        $._builtin_container_type,
        $.json_container_type,
        $.function_type,
        $.optional,
        $._parenthesized_type
      ),

    optional: ($) => seq($._type, "?"),

    function_type: ($) =>
      prec.right(
        seq(
          optional(field("phase_specifier", $.phase_specifier)),
          field("parameter_types", $.parameter_type_list),
          seq(":", field("return_type", $._type))
        )
      ),

    parameter_type_list: ($) => seq("(", commaSep($._type), ")"),

    builtin_type: ($) =>
      choice(
        "num",
        "bool",
        "any",
        "str",
        "void",
        "duration",
        "datetime",
        "regex",
        "bytes"
      ),

    _return_type: ($) => $._type_annotation,

    variadic: ($) => "...",

    parameter_definition: ($) =>
      seq(
        optional(field("reassignable", $.reassignable)),
        optional(field("variadic", $.variadic)),
        field("name", $.identifier),
        optional($._type_annotation)
      ),

    parameter_list: ($) => seq("(", commaSep($.parameter_definition), ")"),

    immutable_container_type: ($) =>
      seq(
        field("collection_type", choice("Array", "Set", "Map", "Promise")),
        $._container_value_type
      ),

    mutable_container_type: ($) =>
      choice(
        seq(
          field("collection_type", choice("MutSet", "MutMap", "MutArray")),
          $._container_value_type
        )
      ),

    _container_value_type: ($) =>
      seq("<", field("type_parameter", $._type), ">"),

    binary_expression: ($) => {
      /** @type {Array<[RuleOrLiteral, number, "left" | "right"]>} */
      const table = [
        ["+", PREC.ADD, "left"],
        ["-", PREC.ADD, "left"],
        ["*", PREC.MULTIPLY, "left"],
        ["/", PREC.MULTIPLY, "left"],
        ["\\", PREC.MULTIPLY, "left"],
        ["%", PREC.MULTIPLY, "left"],
        ["**", PREC.POWER, "left"],
        ["||", PREC.LOGICAL_OR, "left"],
        ["&&", PREC.LOGICAL_AND, "left"],
        //['|', PREC.INCLUSIVE_OR, "left"],
        //['^', PREC.EXCLUSIVE_OR, "left"],
        //['&', PREC.BITWISE_AND, "left"],
        ["==", PREC.EQUAL, "left"],
        ["!=", PREC.EQUAL, "left"],
        [">", PREC.RELATIONAL, "left"],
        [">=", PREC.RELATIONAL, "left"],
        ["<=", PREC.RELATIONAL, "left"],
        ["<", PREC.RELATIONAL, "left"],
        //['<<', PREC.SHIFT, "left"],
        //['>>', PREC.SHIFT, "left"],
        //['>>>', PREC.SHIFT, "left"],
        ["??", PREC.UNWRAP_OR, "right"],
      ];

      return choice(
        ...table.map(([operator, precedence, associativity]) => {
          const precFn = associativity === "left" ? prec.left : prec.right;
          return precFn(
            precedence,
            seq(
              field("left", $.expression),
              field("op", operator),
              field("right", $.expression)
            )
          );
        })
      );
    },

    closure_modifiers: ($) => choice($.phase_specifier),

    closure: ($) =>
      seq(
        optional(field("modifiers", $.closure_modifiers)),
        field("parameter_list", $.parameter_list),
        optional($._return_type),
        "=>",
        field("block", $.block)
      ),

    parenthesized_expression: ($) => seq("(", $.expression, ")"),

    test_statement: ($) =>
      seq("test", field("name", $.string), field("block", $.block)),
  },
});

/**
 * @param {Rule} rule
 */
function braced(rule) {
  return seq("{", rule, "}");
}

/*
 * @param {Rule} rule
 */
function bracketed(rule) {
  return seq("[", rule, "]");
}

/**
 * @param {Rule} rule
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)), optional(","));
}

/**
 * @param {Rule} rule
 */
function commaSep(rule) {
  return optional(commaSep1(rule));
}
